Fix .input class text visibility on /bill/new page

--- a/src/app/text-fixes.css
+++ b/src/app/text-fixes.css
@@ -35,7 +35,8 @@ input[type="password"],
 input[type="number"],
 input[type="tel"],
 input[type="url"],
-input[type="search"] {
+input[type="search"],
+.input {
     color: #ffffff !important;
     -webkit-text-fill-color: #ffffff !important;
     caret-color: #ffffff !important;
@@ -49,7 +50,9 @@ textarea::-webkit-input-placeholder,
 input::-moz-placeholder,
 textarea::-moz-placeholder,
 input:-ms-input-placeholder,
-textarea:-ms-input-placeholder {
+textarea:-ms-input-placeholder,
+.input::placeholder,
+.input::-webkit-input-placeholder {
     color: #64748b !important;
     opacity: 1 !important;
     -webkit-text-fill-color: #64748b !important;
@@ -63,7 +66,11 @@ input:-webkit-autofill:active,
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:hover,
 textarea:-webkit-autofill:focus,
-textarea:-webkit-autofill:active {
+textarea:-webkit-autofill:active,
+.input:-webkit-autofill,
+.input:-webkit-autofill:hover,
+.input:-webkit-autofill:focus,
+.input:-webkit-autofill:active {
     -webkit-text-fill-color: #ffffff !important;
     -webkit-box-shadow: 0 0 0 30px #1e293b inset !important;
     box-shadow: 0 0 0 30px #1e293b inset !important;
@@ -116,7 +123,9 @@ div {
 
 /* Special override for any remaining dark backgrounds with dark text */
 *[class*="bg-white"] input,
-*[class*="bg-slate"] input {
+*[class*="bg-slate"] input,
+*[class*="bg-white"] .input,
+*[class*="bg-slate"] .input {
     color: #ffffff !important;
     -webkit-text-fill-color: #ffffff !important;
 }
